# armada

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  create-project.sh  list-versions.js  package-lock.json  package.json
.changeset/: config.json
.github/workflows/: docker-publish.yml  unit-tests.yml
bootstrap/: bootstrap_cluster_resources.py  bootstrap_database.py  bootstrap_secrets.py  requirements.txt
deploy/: Chart.yaml
docs/: 404.html  index.html  index.xml  sitemap.xml
docs/assets/: index-a1kwfZcB.js
docs/categories/: index.html  index.xml
docs/docs/: index.html  index.xml
docs/js/: main.min.84ebdea7c8b518711780f1e70e9941e62f87902362b45772946a84042a14873f.js
docs/scss/: main.min.13727b3da1e76abccbb6350a3ed23c72dbeb2127717b89d2f229f2623f1bae2e.css
docs/tags/: index.html  index.xml
first-try/first-try-project/: ctx_script.py
first-try/first-try-website/: .dockerignore  Dockerfile  app.py  first-try.db  readme.md
hugo/: .gitignore  hugo.yaml  package-lock.json  package.json
hugo/content/: _index.md
hugo/landing/: index.html  vite.config.ts
hugo/layouts/: index.html
lib/fantomas/: package.json  pyproject.toml
lib/fantomas/src/fantomas/: __init__.py  fantomas_no_driver.py  identity.py  random_sleeper.py  screen.py  utils.py  virtual_cursor_path.py  xdotool_actions.py
lib/fantomas/src/fantomas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lib/fantomas/src/fantomas/no_driver/: CursorIllustration.py  Geometry.py  IframeManager.py
local/: agent.sh  docker-compose.yml
services/agent/: Dockerfile  dump.rdb  (+4 more)
(+366 files in other folders)
